Добавлена новая строка

--- a/fst.html
+++ b/fst.html
@@ -10,6 +10,7 @@
 <a href='#'>Link_2</a>
 <table>
 <tr><td>Column 1</td><td>Column 2</td></tr>
+<tr><td>Column 1</td><td>Column 2</td></tr>
 </table>
 </body>
 </html>
