--- a/fst.html
+++ b/fst.html
@@ -11,6 +11,9 @@
 <table>
 <tr><td>Column 1</td><td>Column 2</td></tr>
 <tr><td>Column 1</td><td>Column 2</td></tr>
+<tr><td>Column 1</td><td>Column 2</td></tr>
+<tr><td>Column 1</td><td>Column 2</td></tr>
+
 </table>
 </body>
 </html>
