Создание ссылки в таблице(в новой ветке)

--- a/fst.html
+++ b/fst.html
@@ -12,8 +12,7 @@
 <tr><td>Column 1</td><td>Column 2</td></tr>
 <tr><td>Column 1</td><td>Column 2</td></tr>
 <tr><td>Column 1</td><td>Column 2</td></tr>
-<tr><td>Column 1</td><td>Column 2</td></tr>
-
+<tr><td><a href='#'>Link in Table</a></td><td>Column 2</td></tr>
 </table>
 </body>
 </html>
